--- a/index.css
+++ b/index.css
@@ -17,6 +17,8 @@ html {
     width: 500;
     border: 5px solid rgb(238, 19, 172);
     padding: 10px;}
+
+    <p {text-align:justify;}
     
       main {background-color: whitesmoke;}  
   
