--- a/index.css
+++ b/index.css
@@ -17,10 +17,15 @@ html {
     width: 500;
     border: 5px solid rgb(238, 19, 172);
     padding: 10px;}
-
-    <p {text-align:justify;}
     
-      main {background-color: whitesmoke;}  
+    section > b, {color:white}
+    
+    .box {
+      border: 2px solid;
+      background-color: white;
+
+  }
+    main {background-color: whitesmoke;}  
   
   
   
