--- a/scrimba-challenge.css
+++ b/scrimba-challenge.css
@@ -1,20 +1,26 @@
 #header {
     background: #44accf;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
-    font-size: 200%;
-    height: 50px;
+    font-size: 150%;
+    height: 80px;
+    margin-bottom: 30;
+    padding: 0;
 }
 #content {
 	background: #b7d84b;
     width: 75%;
     height: 400px;
     float: right;
+    margin-top:-20;
+    padding: 0;
 }
 #image {
 	background: #e2a741;
     width: 25%;
     height: 400px;
     float: left;
+    margin:  -20;
+    padding: 0;
 }
 #footer {
 	background: #ee3e64;
@@ -40,7 +46,7 @@
 }
 .button {
     border: none;
-    color: white;
+    color: rgb(143, 18, 18);
     padding: 16px 32px;
     text-align: center;
     text-decoration: none;
