--- a/scrimba-challenge.css
+++ b/scrimba-challenge.css
@@ -1,18 +1,21 @@
-#header {
+
+
+h1 {
     background: #44accf;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
-    font-size: 150%;
+    font-size: 250%;
     height: 80px;
-    margin-bottom: 30;
-    padding: 0;
+    margin-bottom: 0px;
+    padding: 0px;
 }
+
 #content {
 	background: #b7d84b;
     width: 75%;
     height: 400px;
     float: right;
-    margin-top:-20;
-    padding: 0;
+    margin-top:0px;
+    padding: 0px;
 
 }
 #image {
@@ -20,8 +23,8 @@
     width: 25%;
     height: 400px;
     float: left;
-    margin:  -20;
-    padding: 0;
+    margin:  0px;
+    padding: 0px;
 }
 #footer {
 	background: #ee3e64;
@@ -37,7 +40,7 @@
   margin-right: 100px;
   margin-top: 100px;
   margin-bottom: 100px;
-
+}
 .centre
 {
     display: block;
@@ -47,24 +50,46 @@
 
 }
 
-
 .button {
-  display: inline-block;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  color: #ffffff;
-  background-color:blue;
-  border-radius: 6px;
-  outline: none;
-}
+    display: inline-block;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    color: #ffffff;
+    background-color:blue;
+    border-radius: 6px;
+    outline: none;
+  }
 
-
+  
+  .button-success,
+  .button-error,
+  .button-warning,
+  .button-secondary {
+      color: white;
+      border-radius: 4px;
+      text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+      font-size:80%;
+      box-align:center;
 
   }
-  
-  </head>
-  <body>
-  
-  <button class="button button1">Green</button>
-  <button class="button button2">Blue</button>
+
+  .button-success {
+      background: rgb(28, 184, 65);
+      /* this is a green */
+  }
+
+  .button-error {
+      background: rgb(202, 60, 60);
+      /* this is a maroon */
+  }
+
+  .button-warning {
+      background: rgb(223, 117, 20);
+      /* this is an orange */
+  }
+
+  .button-secondary {
+      background: rgb(66, 184, 221);
+      /* this is a light blue */
+  }
